@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.8.5) unstable; urgency=low
 
   * istream-tee: allow second output to block
+  * widget-http: don't transform error documents
   * merged release 0.7.45
 
  --
